import("//kernel/liteos_m/liteos.gni")

module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
    sources = [
        "game_common.c",
        "game_main.c",
        "game_mqtt.c",
        "game_port.c",
        "snake_game.c",
        "tetris_game.c",
        "dino_game.c",
        "plane_game.c",
        "../401mqtt/mqtt-sdk/MQTTClient-C/src/liteOS/MQTTLiteOS.c",
        "../401mqtt/mqtt-sdk/MQTTClient-C/src/MQTTClient.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTConnectClient.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTConnectServer.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTDeserializePublish.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTFormat.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTPacket.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTSerializePublish.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTSubscribeClient.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTSubscribeServer.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTUnsubscribeClient.c",
        "../401mqtt/mqtt-sdk/MQTTPacket/src/MQTTUnsubscribeServer.c",
    ]
    include_dirs = [
        ".",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//device/board/esp/esp32/liteos_m/hals/driver/wifi_lite",
        "../401mqtt/mqtt-sdk/MQTTPacket/src",
        "../401mqtt/mqtt-sdk/MQTTClient-C/src",
        "../401mqtt/mqtt-sdk/MQTTClient-C/src/liteOS",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//drivers/hdf_core/framework/include/platform/",
        "//drivers/hdf_core/framework/include/utils/",
        "//drivers/hdf_core/framework/support/platform/include/adc",
        "//drivers/hdf_core/framework/support/platform/include/gpio",
        "//drivers/hdf_core/adapter/khdf/liteos_m/osal/include/",
        "//drivers/hdf_core/framework/include/core/",
        "//drivers/hdf_core/framework/include/osal/",
        "//device/soc/esp/esp32/components/driver/include",
        "//device/soc/esp/esp32/components/driver/esp32/include",
    ]
}
